--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div>
-<button class="btn btn-primary">Hi there!</button>
+<div class="row">
+  <div class=" col col-md-12">
+      <app-game-control></app-game-control>
+  </div>  
 </div>
