--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
 <div class="row">
   <div class=" col col-md-12">
-      <app-game-control></app-game-control>
+      <app-game-control (intervalFired)="onInternvalFired($event)"></app-game-control>      
   </div>  
 </div>
+
+
+<div class="row">
+    <div class=" col col-md-12">
+        <app-odd *ngFor="let n of oddNumbers" [number]="n" ></app-odd>      
+        <app-even *ngFor="let n2 of evenNumbers" [number]="n2"></app-even>      
+    </div>  
+  </div>  
