--- a/src/app/game-control/game-control.component.html
+++ b/src/app/game-control/game-control.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col col-md-12">
-        <button class="btn btn-success">Start</button>
-        <button class="btn btn-danger">Stop</button>
+        <button class="btn btn-success" (click)="onStartGame()">Start</button>
+        <button class="btn btn-danger" (click)="onStopGame()">Stop</button>
     </div>
 </div>
