creating new directives

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,3 +11,5 @@
         <app-even *ngFor="let n2 of evenNumbers" [number]="n2"></app-even>      
     </div>  
   </div>  
+
+  <p appBasicHighlight> Style me with basic directive!</p>
