--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,3 +13,4 @@
   </div>  
 
   <p appBasicHighlight> Style me with basic directive!</p>
+  <p appBetterHighlight> Style me with better directive!</p>
