--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,58 @@
 <div class="row">
   <div class=" col col-md-12">
-      <app-game-control (intervalFired)="onInternvalFired($event)"></app-game-control>      
+   <!--   <app-game-control (intervalFired)="onInternvalFired($event)"></app-game-control>      -->
   </div>  
 </div>
 
 
-<div class="row">
+<div class="col-xs-12">
+  <button
+    class="btn btn-primary"
+    (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+<!--
+<div  class="row">
     <div class=" col col-md-12">
         <app-odd *ngFor="let n of oddNumbers" [number]="n" ></app-odd>      
         <app-even *ngFor="let n2 of evenNumbers" [number]="n2"></app-even>      
     </div>  
   </div>  
-
+-->
   <p appBasicHighlight> Style me with basic directive!</p>
   <p appBetterHighlight [defaultColor]="'yellow'" [highlightColor]="'red'"> Style me with better directive!</p>
+
+<!--
+<ng-template [ngIf] ="!onlyOdd">
+  <div>
+    <li
+    class="list-group-item"
+    [ngClass] = "{ odd: even %2 !==0}"
+    [ngStyle] = "{ backgroundColor: even % 2 !==0 ? 'yellow' : 'transparent' }"
+    *ngFor = "let even of evenNumbers"
+    >
+      {{ even }}
+    </li>
+  </div>
+</ng-template>
+-->
+
+<div *ngIf="onlyOdd">
+  <li
+  class="list-group-item"
+  [ngClass] = "{ odd: odd %2 !==0}"
+  [ngStyle] = "{ backgroundColor: odd % 2 !==0 ? 'yellow' : 'transparent' }"
+  *ngFor = "let odd of oddNumbers">
+    {{ odd }}
+  </li>
+</div>
+
+
+<div *appUnless="onlyOdd">
+  <li
+  class="list-group-item"
+  [ngClass] = "{ odd: even %2 !==0}"
+  [ngStyle] = "{ backgroundColor: even % 2 !==0 ? 'yellow' : 'transparent' }"
+  *ngFor = "let even of evenNumbers">
+    {{ even }}
+  </li>
+</div>
+
