--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,3 +56,10 @@
   </li>
 </div>
 
+<div [ngSwitch]="value">
+<p *ngSwitchCase="5"> value is 5</p>
+<p *ngSwitchCase="10"> value is 10</p>
+<p *ngSwitchCase="100"> value is 100</p>
+<p *ngSwitchDefault> value is default</p>
+</div>
+
